--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Chat App",
+  "name": "chatapp",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -33,6 +33,7 @@
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-transition-group": "^4.4.2"
   }
 }
